--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-     <title>Title Goes Here</title>
+     <title>Dom Play</title>
   <meta charset="utf-8" />
   <meta name="robots" content="noindex,nofollow" />
   <meta name="viewport" content="width=device-width" />
@@ -10,7 +10,7 @@
  </head>
  <body>
      <header>
-     <h1>Title Goes Here</h1>
+     <h1>DOm Play</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
             <a href="#" target="_blank">Name of project goes here</a>
@@ -19,10 +19,11 @@
      </header>
      
    <main class="wrapper">
-    <p>Content goes here</p>
+    <p>Hamlet: TO be or not to be </p>
+    <p> Skull: are you talking to me? </p>
      <footer>
-      <p><small>&copy; 2021 by 
-          YOUR NAME HERE, All Rights Reserved ~ 
+      <p><small>&copy; 2022 by 
+          Sadie Stevenson, All Rights Reserved ~ 
           <a id="html-checker" href="#">Check HTML</a> ~ 
           <a id="css-checker" href="#">Check CSS</a></small>
      </p>
