--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <meta name="viewport" content="width=device-width" />
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/nav.css" />
+  
+  <style>
+   .hamlet
+   
+   
+  </style>
+  
+  
  </head>
  <body>
      <header>
@@ -19,7 +27,7 @@
      </header>
      
    <main class="wrapper">
-    <p>Hamlet: TO be or not to be </p>
+    <p class="hamlet">Hamlet: TO be or not to be </p>
     <p> Skull: are you talking to me? </p>
      <footer>
       <p><small>&copy; 2022 by 
