--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
   <link rel="stylesheet" href="css/main.css" />
   <link rel="stylesheet" href="css/nav.css" />
   
-  <style>
+ /* <style>
    .hamlet
    
    
   </style>
+  */
   
   
  </head>
@@ -27,8 +28,9 @@
      </header>
      
    <main class="wrapper">
-    <p class="hamlet">Hamlet: TO be or not to be </p>
+    <p><span class="hamlet">Hamlet: TO be or not to be</span> </p>
     <p> Skull: are you talking to me? </p>
+    <p><span class="hamlet">Hamlet: what did you say </span> </p>
      <footer>
       <p><small>&copy; 2022 by 
           Sadie Stevenson, All Rights Reserved ~ 
