--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
      </p>
     </footer>
   </main>
-  <script src="js/main.js"></script>
+  <script src="js/dom-play.js"></script>
  </body>
 </html>
