--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
      </header>
      
    <main class="wrapper">
+    
+    <h2> The webpage shows a small play on how javascript allows the user to highlight the roles when the character is ready to speak without refreshing the page. </h2>
 
     <h2 class="subheader">The Notebook</h2>
     <div id="play">
